--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -152,3 +152,32 @@ h3{
         top: 33%;
     }
 }
+
+#web_04{
+    width: 100%;
+    #s4_1{
+        opacity: 0;
+        width: 26.5%;
+        left: 6.2%;
+        top: 35%;
+    }
+    #s4_2{
+        opacity: 0;
+        width: 19.5%;
+        left: 32.5%;
+        top: 35%;
+    }
+    #s4_3{
+        opacity: 0;
+        width: 22.5%;
+        left: 52%;
+        top: 35%;
+    }
+    #s4_4{
+        opacity: 0;
+        width: 19.8%;
+        left: 74.5%;
+        top: 35%;
+    }
+   
+}
